# dictionary

./: CMakeLists.txt  README.md  cipher.c  cipher.h  macro.h  main.c  trie.c  trie.h
.github/workflows/: cmake.yml
